--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,21 +2,34 @@
 <html>
 <head>
 	<title>{% block title %}{% endblock %}</title>
-	<link rel="stylesheet" href="vendor/css/bootstrap.min.css">
-	<script src="vendor/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="static/vendor/css/bootstrap.min.css">
+	<script src="static/vendor/js/jquery.min.js"></script>
+	<script src="static/vendor/js/bootstrap.min.js"></script>
 	{% block javascripts %}{% endblock %}
 </head>
 <body>
-	<div>
-		<ul>
-			{% for link in links %}
-				<li style = "display:inline;">
-					<a href="{{url_for(link.view)}}">{{link.title}}</a>
-				</li>
-			{% endfor %}
-		</ul>
-	</div>
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Tuer</a>
+		</div>
 
-	{% block content %}{% endblock %}
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				{% for link in links %}
+					<li class="active"><a href="{{ url_for(link.view) }}">{{ link.title }}</a></li>
+				{% endfor %}
+			</ul>
+		</div>
+	</nav>
+
+	<div class="container">
+		{% block content %}{% endblock %}
+	</div>
 </body>
 </html>
