--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,9 +2,14 @@
 <html>
 <head>
 	<title>{% block title %}{% endblock %}</title>
+
 	<link rel="stylesheet" href="static/vendor/css/bootstrap.min.css">
+	<link rel="stylesheet" href="static/css/styles.css">
+
 	<script src="static/vendor/js/jquery.min.js"></script>
 	<script src="static/vendor/js/bootstrap.min.js"></script>
+
+	{% block styles %}{% endblock %}
 	{% block javascripts %}{% endblock %}
 </head>
 <body>
@@ -22,7 +27,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				{% for link in links %}
-					<li class="active"><a href="{{ url_for(link.view) }}">{{ link.title }}</a></li>
+					<li class=""><a href="{{ url_for(link.view) }}">{{ link.title }}</a></li>
 				{% endfor %}
 			</ul>
 		</div>
