--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,5 +36,11 @@
 	<div class="container">
 		{% block content %}{% endblock %}
 	</div>
+
+	<footer>
+		<div class="container">
+			<p>Created by Michigan Tech students for MHacks III</p>
+		</div>
+	</footer>
 </body>
 </html>
