--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,22 @@
 
 {% block title %}Home{% endblock %}
 
+{% block styles %}
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">
+{% endblock %}
+
+{% block javascripts %}
+	<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js?2"></script>
+	<script src="static/js/index.js"></script>
+{% endblock %}
+
 {% block content %}
-	<h1>Hello, {{user.nickname}}!</h1>
+	<div class="page-header">
+		<h1>Welcome to Tuerist! <small>See something new.</small></h1>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div id="map"></div>
+		</div>
+	</div>
 {% endblock %}
